--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.pytest_cache
+# python import magic atom package
+.magicindex.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
